Añadido la pagina de blog y entrada

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                     <img src="img/blog1.jpg" alt="Entrada de blog">
                 </div>
                 <div class="texto-entrada">
-                    <a href="#">
+                    <a href="entrada.html">
                         <h4>Terraza en el techo de su casa</h4>
                     </a>
                     <p>Escrito el: <span>20/10/2019</span> por: <span>Admin</span></p>
@@ -165,7 +165,7 @@
                     <img src="img/blog2.jpg" alt="Entrada de blog">
                 </div>
                 <div class="texto-entrada">
-                    <a href="#">
+                    <a href="entrada.html">
                         <h4>Guía para la decoración de tu hogar</h4>
                     </a>
                     <p>Escrito el: <span>20/10/2019</span> por: <span>Admin</span></p>
