--- a/anuncios.html
+++ b/anuncios.html
@@ -56,7 +56,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -127,7 +127,7 @@
                                 <p>5</p>
                             </li>
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -150,7 +150,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -173,7 +173,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
         </div>
