--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,66 @@
 
     <h1 class="fw-300 centrar-texto"> Contacto </h1>
     <img src="/img/destacada3.jpg" alt="Imagen Principal">
-    
+
+    <main class="contenedor seccion contenido-centrado">
+        <h2 class="fw-300 centrar-texto">Llena el formulario de contacto</h2>
+        
+        <form class="contacto" action="">
+            <fieldset>
+                <legend>Información personal:</legend>
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" placeholder="Tu nombre">
+
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" placeholder="Tu correo electrónico" required>
+
+                <label for="telefono"> Teléfono:</label>
+                <input type="tel" id="telefono" placeholder="Tu Teléfono" required>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje"></textarea>
+            </fieldset>
+
+            <fieldset>  
+                <legend>Información sobre Propiedad</legend>
+
+                <label for="opciones">Venta o Compra</label>
+                <select id="opciones">
+                    <option value=""disabled selected>--Seleccione--</option>
+                    <option value="">Compra</option>
+                    <option value="">Vende</option>
+                </select>
+
+                <label for="cantidad">Cantidad:</label>
+                <input type="number" id="cantidad" min="0" max="100" step="5">
+            </fieldset>
+
+            <fieldset>
+                <legend>Contacto</legend>
+
+                <p>Como desea ser contactado:</p>
+
+                <div class="forma-contacto">
+                    <label for="telefono">Telefóno</label>
+                    <input type="radio" name="contacto" value="telefono" id="telefono">
+
+                    <label for="correo">E-mail</label>
+                    <input type="radio" name="contacto" value="correo" id="correo">
+                </div>
+
+                <p>Si eligió Telefono, elija la fecha y hora:</p>
+                <label for="fecha">Fecha</label>
+                <input type="date" id="fecha">
+
+                <label for="hora">Hora:</label>
+                <input type="time" id="hora" min="09:00" max="18:00">
+            </fieldset>
+
+            <input type="submit" value="Enviar" class="boton boton-verde">
+
+        </form>
+
+    </main>
 
     <footer class="site-footer seccion">
         <div class="contenedor contenedor-footer">
