--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
                 <a href="/">
                     <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
-
-                <nav class="navegacion">
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="/img/barras.svg" alt="icono menu">
+                    </a>
+                </div>
+                <nav id="navegacion" class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
